Installationen funkar till start av admin-server ... Där saknas filen som förväntas finnas där: AdminServerStartService.sh

--- a/wlsinstall/roles/common/templates/weblogic/ora_inst_loc.j2
+++ b/wlsinstall/roles/common/templates/weblogic/ora_inst_loc.j2
@@ -4,5 +4,5 @@
 
 # Oracle inventory file properties
 
-inventory_loc={{ oracle.inventory_path }}
-inst_group={{ oracle.group }}
+inventory_loc={{ base_directory }}/oraInventory
+inst_group={{ oracle_install_group }}
