--- a/wlsinstall/roles/common/templates/weblogic/create_basic_domain_py.j2
+++ b/wlsinstall/roles/common/templates/weblogic/create_basic_domain_py.j2
@@ -1,5 +1,7 @@
 # Thomas Hjert From: ./weblogic12.1.3/installation/inventory/Templates/wlserver/common/templates/scripts/wlst/basicWLSDomain.py
 #=======================================================================================
+### This file is created from an Ansible template
+#=======================================================================================
 # This is an example of a simple WLST offline configuration script. The script creates
 # a simple WebLogic domain using the Basic WebLogic Server Domain template. The script
 # demonstrates how to open a domain template, create and edit configuration objects,
@@ -31,7 +33,9 @@
 # Open a domain template.
 #=======================================================================================
 
-readTemplate("@WL_HOME/common/templates/wls/wls.jar")
+###readTemplate("@WL_HOME/common/templates/wls/wls.jar")
+###readTemplate("{{ configuration_home }}/common/templates/wls/wls.jar")
+readTemplate("/u01/app/oracle/weblogic12.1.3/installation/wlserver/common/templates/wls/wls.jar")
 
 #=======================================================================================
 # Configure the Administration Server and SSL port.
@@ -58,6 +62,7 @@ set('ListenPort', 7002)
 cd('/')
 cd('Security/base_domain/User/weblogic')
 # Please set password here before using this script, e.g. cmo.setPassword('value')
+cmo.setPassword('{{ admin_password }}')
 
 #=======================================================================================
 # Create a JMS Server.
@@ -128,7 +133,10 @@ assign('JDBCSystemResource', 'myDataSource', 'Target', 'AdminServer')
 #=======================================================================================
 
 setOption('OverwriteDomain', 'true')
-writeDomain('@BEAHOME/user_projects/domains/basicWLSDomain')
+###writeDomain('@BEAHOME/user_projects/domains/basicWLSDomain')
+###writeDomain('@BEAHOME/user_projects/domains/{{ domain_name }}')
+###writeDomain('{{domain_configuration_home }}/{{ domain_name }}')
+writeDomain('{{domain_configuration_home }}')
 closeTemplate()
 
 #=======================================================================================
