--- a/ansible-weblogic12c/windows/roles/fmw-software/templates/silent.xml.j2
+++ b/ansible-weblogic12c/windows/roles/fmw-software/templates/silent.xml.j2
@@ -7,11 +7,9 @@
 If you do not include the COMPONENT_PATHS data-value name in the silent.xml file, the complete Oracle WebLogic Server and Oracle Workshop for WebLogic are installed.
     <data-value name="COMPONENT_PATHS" value="WebLogic Server/Core Application Server|WebLogic Server/Administration Console" />  
 --> 
-    <data-value name="INSTALL_NODE_MANAGER_SERVICE" value="no"  />
-<!--
+    <data-value name="INSTALL_NODE_MANAGER_SERVICE" value="yes"  />
     <data-value name="NODEMGR_PORT" value="{{ node_manager_listen_port }}" />
---> 
-    <data-value name="INSTALL_SHORTCUT_IN_ALL_USERS_FOLDER" value="no"/>
+    <data-value name="INSTALL_SHORTCUT_IN_ALL_USERS_FOLDER" value="yes"/>
 <!--
     <data-value name="LOCAL_JVMS" value="{{ jdk_folder }}"/>
 --> 
